# SaKADo_TEST

./: .gitignore  README.md
client-unity/Assets/Oculus/: OculusProjectConfig.asset  OculusProjectSetupSettings.asset
client-unity/Assets/Plugins/Android/: AndroidManifest.xml
client-unity/Assets/Prefabs/: Sphere.prefab
client-unity/Assets/Resources/: OculusRuntimeSettings.asset
client-unity/Assets/Scenes/: SampleScene.unity
client-unity/Assets/Scripts/: DepthKitDriver.cs  DepthPointCloudCast.cs  Extensions.cs  GameManager.cs
client-unity/Assets/Shaders/: CustomDepthPointCloudCast.compute  DepthCastPointCloud.compute  DepthKit.hlsl
client-unity/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
client-unity/Assets/XR/Settings/: OculusSettings.asset
client-unity/Assets/autogen/: SpacetimeDBClient.g.cs
client-unity/Assets/autogen/Reducers/: DebugMapSize.g.cs  Disconnect.g.cs  SendPointsToServer.g.cs  Test.g.cs  UpdatePlayer.g.cs
client-unity/Assets/autogen/Tables/: LoggedOutPlayer.g.cs  Player.g.cs  RaycastDebugger.g.cs  Tracker.g.cs  VoxelGrid.g.cs  VoxelWorld.g.cs
client-unity/Assets/autogen/Types/: ControllerInput.g.cs  DbQuaternion.g.cs  DbVector2.g.cs  Player.g.cs  (+6 more)
client-unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
client-unity/UserSettings/: EditorUserSettings.asset
client-unity/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt
server-csharp/: Lib.cs
server-rust/: Cargo.toml
server-rust/src/: db_quaternion.rs  db_vector2.rs  db_vector3.rs  lib.rs  other_types.rs  tables.rs  voxel_physics.rs
