[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.5.0"
log = "0.4"
papaya = "0.2.3"
lazy_static = "1.5.0"
#wasm-bindgen-spawn = "0.0.2"
#wasm_thread = "0.3.3"
rayon = "1.11.0"